Updating homepage copy. Fixed wrapping issue for main header, and vertically aligned the video when necessary

--- a/modules/theme/client/css/styles.css
+++ b/modules/theme/client/css/styles.css
@@ -5406,6 +5406,12 @@ a {
   width: 100%;
   height: 100%;
 }
+.fluidvids.mid-vert iframe {
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-25%);
+  -ms-transform: translateY(-50%);
+}
 .pdf-container {
   padding: 20px;
   border-style: solid;
