--- a/modules/theme/client/less/outset.less
+++ b/modules/theme/client/less/outset.less
@@ -2037,6 +2037,13 @@ a {
   height   : 100%;
 }
 
+.fluidvids.mid-vert iframe {
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-25%);
+  -ms-transform: translateY(-50%);
+}
+
 .pdf-container {
   padding      : 20px;
   border-style : solid;
